# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
resolver = "2"
members = [
    "src/benchmarks",
    "src/columnar_storage",
    "src/common",
    "src/metric_engine",
    "src/pb_types",
    "src/remote_write",
    "src/server"
]

[workspace.package]
version = "2.2.0-alpha"
authors = ["Apache HoraeDB(incubating) <dev@horaedb.apache.org>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/apache/horaedb"
homepage = "https://horaedb.apache.org/"
description = "A high-performance, distributed, cloud native time-series database."

[workspace.dependencies]
anyhow = { version = "1.0" }
arrow = { version = "53", features = ["prettyprint"] }
arrow-schema = "53"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
async-stream = "0.3"
async-trait = "0.1"
byteorder = "1"
bytes = "1"
bytesize = "1"
clap = "4"
columnar_storage = { path = "src/columnar_storage" }
common = { path = "src/common" }
criterion = "0.5"
datafusion = "43"
futures = "0.3"
hotpath = "0.5.2"
itertools = "0.3"
lazy_static = "1"
metric_engine = { path = "src/metric_engine" }
num_cpus = "1"
object-pool = "0.6"
object_store = { version = "0.11" }
once_cell = "1"
parquet = { version = "53" }
pb_types = { path = "src/pb_types" }
prost = { version = "0.13" }
remote_write = { path = "src/remote_write" }
seahash = { version = "4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
temp-dir = "0.1"
test-log = "0.2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1"

# This profile optimizes for good runtime performance.
[profile.release]
# reference: https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
debug = true
overflow-checks = true

# This profile is used to produce a smaller (no symbols) binary with a little bit poorer performance,
# but with a faster speed and low memory consumption required by compiling.
[profile.release-slim]
inherits = "release"
codegen-units = 16
debug = false
strip = true
