[package]
name = "arrow_deps"
version = "0.1.0"
authors = ["CeresDB Authors <ceresdbservice@gmail.com>"]

[package.edition]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "15.0.0"
parquet = "15.0.0"

[dependencies.uncover]
git = "https://github.com/matklad/uncover.git"
rev = "1d0770d997e29731b287e9e11e4ffbbea5f456da"

[dependencies.datafusion]
git = "https://github.com/CeresDB/arrow-datafusion.git"
rev = "8330a40519b0cb32c04a24a540511cd4638ac9b4"

[dependencies.datafusion-expr]
git = "https://github.com/CeresDB/arrow-datafusion.git"
rev = "8330a40519b0cb32c04a24a540511cd4638ac9b4"
