[package]
name = "arrow_deps"
version = "0.1.0"
authors = ["CeresDB Authors <ceresdbservice@gmail.com>"]

[package.edition]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "23.0.0", features = ["prettyprint"] }
parquet = { version = "23.0.0" }

[dependencies.uncover]
git = "https://github.com/matklad/uncover.git"
rev = "1d0770d997e29731b287e9e11e4ffbbea5f456da"

[dependencies.datafusion]
git = "https://github.com/CeresDB/arrow-datafusion.git"
rev = "d84ea9c79c9e83ff0b4dadf8880a4983af59ef48"

[dependencies.datafusion-expr]
git = "https://github.com/CeresDB/arrow-datafusion.git"
rev = "d84ea9c79c9e83ff0b4dadf8880a4983af59ef48"
