[package]
name = "benchmarks"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
analytic_engine = { workspace = true }
arena = { workspace = true }
arrow = { workspace = true }
arrow2 = { version = "0.12.0", features = [ "io_parquet" ] }
base64 = { workspace = true }
clap = { workspace = true }
common_types = { workspace = true }
common_util = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
parquet_ext = { workspace = true }
pprof = { version = "0.10", features = ["flamegraph", "criterion"] }
rand = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
table_engine = { workspace = true }
table_kv = { workspace = true }
tokio = { workspace = true }
trace_metric = { workspace = true }
wal = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "sst-tools"
