[package]
name = "benchmarks"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
analytic_engine = { workspace = true }
arena = { workspace = true }
arrow = { workspace = true }
base64 = { workspace = true }
bytes_ext = { workspace = true }
clap = { workspace = true }
common_types = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
generic_error = { workspace = true }
log = { workspace = true }
macros = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
parquet_ext = { workspace = true }
pprof = { git = "https://github.com/tanruixiang/pprof-rs.git", rev = "6248431493975a2f96cd9c2363b152517391ed04", features = ["flamegraph", "criterion"] }
rand = { workspace = true }
runtime = { workspace = true }
serde = { workspace = true }
size_ext = { workspace = true }
snafu = { workspace = true }
table_engine = { workspace = true }
table_kv = { workspace = true }
time_ext = { workspace = true }
tokio = { workspace = true }
toml_ext = { workspace = true }
trace_metric = { workspace = true }
wal = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "sst-tools"
