# Copyright 2023 The CeresDB Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "benchmarks"

[package.license]
workspace = true

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
analytic_engine = { workspace = true }
arena = { workspace = true }
arrow = { workspace = true }
base64 = { workspace = true }
bytes_ext = { workspace = true }
clap = { workspace = true }
common_types = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
generic_error = { workspace = true }
logger = { workspace = true }
macros = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
parquet_ext = { workspace = true }
pprof = { workspace = true, features = ["flamegraph", "criterion"] }
rand = { workspace = true }
runtime = { workspace = true }
serde = { workspace = true }
size_ext = { workspace = true }
snafu = { workspace = true }
table_engine = { workspace = true }
table_kv = { workspace = true }
time_ext = { workspace = true }
tokio = { workspace = true }
toml_ext = { workspace = true }
trace_metric = { workspace = true }
wal = { workspace = true, features = ["wal-rocksdb", "wal-message-queue", "wal-table-kv"] }
zstd = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "sst-tools"
