[package]
name = "catalog"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies, in alphabetical order
async-trait = { workspace = true }
snafu = { workspace = true }
common_types = { workspace = true }
common_util = { workspace = true }
table_engine = { workspace = true }
