[package]
name = "catalog"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
async-trait = { workspace = true }
common_types = { workspace = true }
common_util = { workspace = true }
log = { workspace = true }
snafu = { workspace = true }
table_engine = { workspace = true }
