[package]
name = "catalog"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
async-trait = { workspace = true }
common_types = { workspace = true }
generic_error = { workspace = true }
log = { workspace = true }
macros = { workspace = true }
snafu = { workspace = true }
table_engine = { workspace = true }
time_ext = { workspace = true }
