[package]
name = "catalog_impls"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
async-trait = { workspace = true }
catalog = { workspace = true }
cluster = { workspace = true }
common_types = { workspace = true }
common_util = { workspace = true }
log = { workspace = true }
meta_client = { workspace = true }
snafu = { workspace = true }
system_catalog = { workspace = true }
table_engine = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
analytic_engine = { workspace = true, features = ["test"] }
