# Copyright 2023 The CeresDB Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "catalog_impls"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
async-trait = { workspace = true }
catalog = { workspace = true }
cluster = { workspace = true }
common_types = { workspace = true }
generic_error = { workspace = true }
logger = { workspace = true }
macros = { workspace = true }
meta_client = { workspace = true }
snafu = { workspace = true }
system_catalog = { workspace = true }
table_engine = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
analytic_engine = { workspace = true, features = ["test"] }
