[package]
name = "ceresdbproto_deps"
version = "0.1.0"
authors = ["CeresDB Authors <ceresdbservice@gmail.com>"]

[package.edition]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ceresdbproto]
git = "https://github.com/ShiKaiWi/ceresdbproto.git"
rev = "0df37aa7b20919a0de7220ea77e9f251bc582026"