[package]
name = "ceresdbproto_deps"
version = "0.1.0"
authors = ["CeresDB Authors <ceresdbservice@gmail.com>"]

[package.edition]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ceresdbproto]
git = "https://github.com/CeresDB/ceresdbproto.git"
rev = "ecc410b8ccd79c89391788597d977afe6d6a98ed"