[package]
name = "cluster"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
async-trait = { workspace = true }
bytes_ext = { workspace = true }
catalog = { workspace = true }
ceresdbproto = { workspace = true }
common_types = { workspace = true }
etcd-client = { workspace = true }
generic_error = { workspace = true }
log = { workspace = true }
macros = { workspace = true }
meta_client = { workspace = true }
prost = { workspace = true }
runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
table_engine = { workspace = true }
time_ext = { workspace = true }
tokio = { workspace = true }
wal = { workspace = true }
