[package]
name = "common_types"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[features]
test = []

[dependencies]
# In alphabetical order
arrow = { workspace = true }
arrow_ext = { workspace = true }
bytes_ext = { workspace = true }
ceresdbproto = { workspace = true }
chrono = { workspace = true }
datafusion = { workspace = true }
hash_ext = { workspace = true }
macros = { workspace = true }
paste = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
sqlparser = { workspace = true }
